--- a/sty/styl.css
+++ b/sty/styl.css
@@ -18,6 +18,71 @@
 	padding: 0 2px;
 }
 
+.searchBox{
+	padding-top: 25px;
+	width: 1030px;
+	height: 115px;
+	background: #f6f6f6;
+}
 
+.searchBox .search{
+	margin-left:130px;
+}
 
+.searchBox .search input:nth-of-type(1){
+	border: none;
+	width: 498px;
+	height: 33px;
+	border: 1px solid #f10215;
+	float: left;
+}
 
+.searchBox .search input:nth-of-type(2){
+	color: #fff;
+	border: none;
+	width: 50px;
+	height: 35px;
+	background: #f10215;
+	float: left;
+}
+.searchBox .search .cart{
+	width: 188px;
+	height: 33px;
+	border: 1px solid #e3e4e5;
+	margin-left: 31px;
+	line-height: 33px;
+	color: red;
+	text-align: center;
+	font-size: 12px;
+	float: left;
+	background: #fff;
+}
+.searchBox p{
+	clear: both;
+	margin-left: 130px;
+	line-height: 31px;
+}
+
+.searchBox p span:first-child{
+	color: red;
+}
+.searchBox p span{
+	cursor: pointer;
+	margin-right: 9px;
+	font-size: 11px;
+	color: #999;
+}
+.searchBox ul li{
+	margin: 12px 15px;
+	font-size: 16px;
+	color: #555;
+	list-style: none;
+	float: left;
+	font-weight: bold;
+}
+.searchBox ul{
+	margin-left: 25px;
+}
+.searchBox img{
+	margin-left: 100px;
+}
